tests/ui/inference/issue-70082.stderr
error[E0284]: type annotations needed
  --> $DIR/issue-70082.rs:7:26
   |
LL |     let y: f64 = 0.01f64 * 1i16.into();
   |                          ^ cannot infer type
   |
   = note: cannot satisfy `<f64 as Mul<_>>::Output == f64`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0284`.
